# VerifiedNet

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
docs/: README.md
docs/architecture/: contracts.md  final-platform-vision.md  package_boundaries.md  runtime_security.md
docs/migration/: license_inventory.md  source_inventory.md  wave_a_file_harvest_plan.md
docs/provenance/: wave_a_provenance.md
docs/research/: README.md  closcall_AUDIT.md  constellation_AUDIT.md  evpn-vxlan-frr-lab_AUDIT.md  final-research-summary.md  sonic-acl-validation-harness_AUDIT.md  sonic-intent-agent_AUDIT.md
docs/roadmap/: future-gates.md
docs/source-audits/: README.md  neuronoc-network-ops-assistant_AUDIT.md  sonic-troubleshooting-agent_AUDIT.md
scripts/: capture_live_frr_fixtures.py
tests/: conftest.py
tests/contract/: test_artifact_shapes.py  test_benchmark_shapes.py  test_checkpoint_predictor_shapes.py  test_checkpoint_shapes.py  test_command_invocation.py  test_datasets_export_shapes.py  test_datasets_features_shapes.py  test_datasets_shapes.py  test_evaluation_shapes.py  test_exec_result.py  test_gate12_shapes.py  test_gate13_shapes.py  test_gate14_shapes.py  test_gate14b_shapes.py  test_gate15_shapes.py  test_gate16a_contract.py  test_gate16b_contract.py  test_gate17a_contract.py  test_gate17a_regression.py  test_gate18a_contract.py  test_gate18b_contract.py  test_gate19a_contract.py  test_gate19b_contract.py  test_gate20a_contract.py  test_gate20b_contract.py  test_gate20c_contract.py  test_incident_shapes.py  test_preflight_shapes.py  test_real_training_shapes.py  test_slm_shapes.py  (+3 more)
(+459 files in other folders)
