[project]
name = "verifiednet"
version = "0.1.0"
description = "An open platform for building, verifying, benchmarking, and evaluating AI systems for computer networks."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Chandana Nandi", email = "nandichandana999@gmail.com" }]
dependencies = [
    "pydantic>=2.7,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verifiednet"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S", "RUF"]
ignore = [
    "S101", # assert allowed (tests + invariants)
]

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/security_violations/*" = ["ALL"]  # deliberately violating fixtures
"src/verifiednet/runtime/process.py" = ["S603"]   # the ONE sanctioned subprocess call site

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["verifiednet"]
exclude = ["tests/fixtures/security_violations/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: pure unit tests",
    "contract: schema/interface contract tests",
    "property: hypothesis property tests",
    "failure: failure-path tests",
    "security: AST security-boundary tests",
    "integration: live Docker-gated integration tests (skip when Docker is unavailable)",
]
addopts = "-q"
